Enhance platform styling - Applied animated background - Updated the main font - Added neon effects - Updated event cards - Replaced and styled footer

--- a/partyn-frontend/src/index.css
+++ b/partyn-frontend/src/index.css
@@ -2,62 +2,183 @@
 @tailwind components;
 @tailwind utilities;
 
-@keyframes slide-in-right {
+
+/* Custom font class */
+.font-courier-new {
+    font-family: 'Courier New', Courier, monospace;
+}
+
+/* Custom shadow class for red neon effect */
+.neon-red {
+    box-shadow:
+            0 0 2px #fff,            /* Inner white glow */
+            inset 0 0 2px #fff,      /* Outer white glow */
+            0 0 18px rgb(145, 3, 3),           /* Brighter red glow */
+            0 0 13px rgb(145, 3, 3),           /* More intense red glow */
+            0 0 8px rgb(145, 3, 3);           /* Even more intense red glow */
+}
+
+
+/* Start Animations */
+@-webkit-keyframes animatetop {
     from {
-        transform: translateX(100%);
+        top: -300px;
         opacity: 0;
     }
     to {
-        transform: translateX(0);
+        top: 0;
         opacity: 1;
     }
 }
-
-@keyframes slide-in-left {
+@keyframes animatetop {
     from {
-        transform: translateX(-100%);
+        top: -300px;
         opacity: 0;
     }
     to {
-        transform: translateX(0);
+        top: 0;
         opacity: 1;
     }
 }
-
-@keyframes slide-out-right {
-    from {
-        transform: translateX(0);
-        opacity: 1;
-    }
-    to {
-        transform: translateX(100%);
+@-webkit-keyframes zoomIn {
+    0% {
         opacity: 0;
+        -webkit-transform: scale3d(0.3, 0.3, 0.3);
+        transform: scale3d(0.3, 0.3, 0.3);
     }
-}
-
-@keyframes slide-out-left {
-    from {
-        transform: translateX(0);
+    50% {
         opacity: 1;
     }
-    to {
-        transform: translateX(-100%);
+}
+@keyframes zoomIn {
+    0% {
         opacity: 0;
+        -webkit-transform: scale3d(0.3, 0.3, 0.3);
+        transform: scale3d(0.3, 0.3, 0.3);
+    }
+    50% {
+        opacity: 1;
     }
 }
+/* End Animations */
 
-.slide-in-right {
-    animation: slide-in-right 0.5s forwards;
+/* Start BackGround Animation */
+.area {
+    background: #000000;
+    background: -webkit-linear-gradient(to left, #931a1a, #dc8383);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 
-.slide-in-left {
-    animation: slide-in-left 0.5s forwards;
+.circles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
-.slide-out-right {
-    animation: slide-out-right 0.5s forwards;
+.circles li {
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: rgb(96, 13, 13);
+    animation: animate 25s linear infinite;
+    bottom: -150px;
 }
 
-.slide-out-left {
-    animation: slide-out-left 0.5s forwards;
+.circles li:nth-child(1) {
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
 }
+
+.circles li:nth-child(2) {
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 2s;
+    animation-duration: 12s;
+}
+
+.circles li:nth-child(3) {
+    left: 70%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+}
+
+.circles li:nth-child(4) {
+    left: 40%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+
+.circles li:nth-child(5) {
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+}
+
+.circles li:nth-child(6) {
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+}
+
+.circles li:nth-child(7) {
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 7s;
+}
+
+.circles li:nth-child(8) {
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 45s;
+}
+
+.circles li:nth-child(9) {
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+}
+
+.circles li:nth-child(10) {
+    left: 85%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 11s;
+}
+
+@keyframes animate {
+    0% {
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+    }
+    100% {
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
+    }
+}
+/* End BackGround Animation */
